{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 9,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "raggie-chromadb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b72821e2f351e396",
            "arn": "arn:aws:ec2:us-east-1:021041863094:instance/i-09e33a3c3e1d4fec4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "raggie-ebs-volume"
                },
                "tags_all": {
                  "Name": "raggie-ebs-volume"
                },
                "throughput": 0,
                "volume_id": "vol-01c54f35312a3d16c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e33a3c3e1d4fec4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0cc7a26260536ec",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c59aaf8af63868a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0611171942a20e97e",
            "tags": {
              "Name": "raggie-chromadb"
            },
            "tags_all": {
              "Name": "raggie-chromadb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0480df5532f12599d"
            ]
          },
          "dependencies": [
            "aws_security_group.raggie_chromadb_sg",
            "aws_security_group.raggie_ecs_sg",
            "aws_subnet.raggie_public_subnet",
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raggie_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:internet-gateway/igw-0d8605372d24ca2fd",
            "id": "igw-0d8605372d24ca2fd",
            "owner_id": "021041863094",
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "dependencies": [
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raggie_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:route-table/rtb-00cfcdca09466a13d",
            "id": "rtb-00cfcdca09466a13d",
            "owner_id": "021041863094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8605372d24ca2fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Raggie Route Table"
            },
            "tags_all": {
              "Name": "Raggie Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.raggie_internet_gateway",
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "raggie_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba403f5714fec604",
            "route_table_id": "rtb-00cfcdca09466a13d",
            "subnet_id": "subnet-0611171942a20e97e"
          },
          "dependencies": [
            "aws_internet_gateway.raggie_internet_gateway",
            "aws_route_table.raggie_rt",
            "aws_subnet.raggie_public_subnet",
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "raggie_chromadb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:security-group/sg-0480df5532f12599d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0480df5532f12599d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0360830c80b75d20b"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20240717054714707900000004",
            "name_prefix": "terraform-",
            "owner_id": "021041863094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Traffic only from public subnet, on port 8000"
            },
            "tags_all": {
              "Name": "Allow Traffic only from public subnet, on port 8000"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.raggie_ecs_sg",
            "aws_subnet.raggie_public_subnet",
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "raggie_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:security-group/sg-0360830c80b75d20b",
            "description": "Allow SSH and HTTP inbound traffic into Cluster Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0360830c80b75d20b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "raggie-ecs-sg",
            "name_prefix": "",
            "owner_id": "021041863094",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raggie_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:subnet/subnet-01f9612c649e91ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f9612c649e91ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021041863094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Raggie Private Subnet"
            },
            "tags_all": {
              "Name": "Raggie Private Subnet"
            },
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "dependencies": [
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raggie_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:subnet/subnet-0611171942a20e97e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0611171942a20e97e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021041863094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Raggie IGW"
            },
            "tags_all": {
              "Name": "Raggie IGW"
            },
            "vpc_id": "vpc-04f2faf682d859329"
          },
          "dependencies": [
            "aws_vpc.raggie_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raggie_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021041863094:vpc/vpc-04f2faf682d859329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082c408a5df780b02",
            "default_route_table_id": "rtb-0fb15c925cb5aa1e9",
            "default_security_group_id": "sg-0742b9fc8d452a07a",
            "dhcp_options_id": "dopt-041ae9a62b3542ff1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f2faf682d859329",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb15c925cb5aa1e9",
            "owner_id": "021041863094",
            "tags": {
              "Name": "Raggie VPC"
            },
            "tags_all": {
              "Name": "Raggie VPC"
            }
          }
        }
      ]
    }
  ]
}